# Invoicely

./: Cargo.toml  README.md  TODO
examples/: 1.json  2025-0001.json
src/: components.rs  fonts.rs  format.rs  image.rs  invoice.rs  lib.rs  locale.rs  main.rs  renderer.rs
src/components/: label.rs  table.rs
src/locale/: en_gb.rs  fi_fi.rs  translations.rs
src/renderer/: rendering_context.rs
