[package]
name = "invoicely"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bigdecimal = { version = "0.4.7", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
font-kit = "0.14.2"
printpdf = { version = "0.8.2", features = ["png"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
image = "0.25.0"